config/iptables.save
# Generated by iptables-save v1.4.21 on Thu Nov 22 03:37:20 2018
*filter
:INPUT ACCEPT [274694:78913786]
:FORWARD ACCEPT [1557373:637252830]
:OUTPUT ACCEPT [255795:38976039]
COMMIT
# Completed on Thu Nov 22 03:37:20 2018
# Generated by iptables-save v1.4.21 on Thu Nov 22 03:37:20 2018
*nat
:PREROUTING ACCEPT [11205:680923]
:INPUT ACCEPT [532:38435]
:OUTPUT ACCEPT [490:36184]
:POSTROUTING ACCEPT [506:37208]
-A PREROUTING -d 192.168.20.6/32 -p tcp -m tcp --dport 5432 -j DNAT --to-destination 192.168.100.8:5432
-A POSTROUTING -s 192.168.100.11/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.12/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.6/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.7/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.14/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.15/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.10/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.17/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.18/32 -j MASQUERADE
-A POSTROUTING -s 192.168.100.2/32 -j MASQUERADE
COMMIT
# Completed on Thu Nov 22 03:37:20 2018
